--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,22 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<div>
+     <% if user_signed_in? %>
+      Logged in as <strong><%= current_user.email %></strong>.
+      <%= link_to 'Edit profile', edit_user_registration_path %> |
+      <%= link_to "Logout", destroy_user_session_path, method: :delete %>
+    <% else %>
+      <%= link_to "Sign up", new_user_registration_path %> |
+      <%= link_to "Login", new_user_session_path %>
+    <% end %>
+  </div>
+
+<% flash.each do |name, msg| %>
+   <% if msg.is_a?(String) %>
+     <%= content_tag :div, msg, :class => "flash_#{name}" %>
+   <% end %>
+<% end %>
 
 <%= yield %>
 
