--- a/app/views/meals/new.html.erb
+++ b/app/views/meals/new.html.erb
@@ -13,12 +13,12 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :title %>
+    <%= f.label :title, "Title" %>
     <%= f.text_field :title %>
   </div>
   <br><br>
   <div class="field">
-    <%= f.label :location %>
+    <%= f.label :location, 'Location' %>
     <%= f.text_field :location %>
   </div>
 
