--- a/app/views/meals/show.html.erb
+++ b/app/views/meals/show.html.erb
@@ -5,8 +5,8 @@
 <% if @meal.host == current_user %>
 <p> Invite Guests </p>
 <%= form_tag(meal_users_path(@meal), :method => "get", id: "search-form") do %>
-  <%= text_field_tag :search, params[:search], placeholder: "Search Users" %>
-  <%= submit_tag "Search", :name => nil %>
+<%= text_field_tag :search, params[:search], placeholder: "Search Users" %>
+<%= submit_tag "Search", :name => nil %>
 <% end %>
 
 <p> Delete this meal link </p>
@@ -14,6 +14,12 @@
 
 <% else %>
 <div>
-<h4>RSVP</h4>
+  <h4>RSVP</h4>
+  <% if @usermeal.invite_status == 'pending' %>
+  <%= button_to 'Attending', meal_usermeal_path(id: @usermeal.id, meal_id: @meal, invite_status: 'attending'), method: :patch, class: 'btn btn-success' %>
+  <%= button_to 'Decline', meal_usermeal_path(id: @usermeal.id, meal_id: @meal, invite_status: 'decline'), method: :patch, class: 'bth btn-warning' %>
+  <% else %>
+  You RSVP'd: <%= @usermeal.invite_status %>
+  <% end %>
 </div>
 <% end %>
