--- a/app/views/meals/show.html.erb
+++ b/app/views/meals/show.html.erb
@@ -3,23 +3,19 @@
 <p><%= @meal.location %> at <%= @meal.hosted_at %></p>
 
 <% if @meal.host == current_user %>
-<p> Invite Guests </p>
-<%= form_tag(meal_users_path(@meal), :method => "get", id: "search-form") do %>
-<%= text_field_tag :search, params[:search], placeholder: "Search Users" %>
-<%= submit_tag "Search", :name => nil %>
-<% end %>
+  <p> Invite Guests </p>
+  <%= form_tag(meal_users_path(@meal), :method => "get", id: "search-form")   do %>
+  <%= text_field_tag :search, params[:search], placeholder: "Search Users" %>
+  <%= submit_tag "Search", :name => nil %>
+  <% end %>
 
-<p> Delete this meal link </p>
-<%= button_to 'Delete Meal', meal_path(@meal), method: :delete, class: 'btn btn-warning' %>
+  <p> Delete this meal link </p>
+  <%= button_to 'Delete Meal', meal_path(@meal), method: :delete, class: 'btn btn-warning' %>
 
 <% else %>
-<div>
-  <h4>RSVP</h4>
-  <% if @usermeal.invite_status == 'pending' %>
-  <%= button_to 'Attending', meal_usermeal_path(id: @usermeal.id, meal_id: @meal, invite_status: 'attending'), method: :patch, class: 'btn btn-success' %>
-  <%= button_to 'Decline', meal_usermeal_path(id: @usermeal.id, meal_id: @meal, invite_status: 'decline'), method: :patch, class: 'bth btn-warning' %>
-  <% else %>
-  You RSVP'd: <%= @usermeal.invite_status %>
-  <% end %>
-</div>
+  <div>
+    <h4>RSVP: <%= @usermeal.invite_status %></h4>
+    <%= button_to 'Attending', meal_usermeal_path(id: @usermeal.id, meal_id: @meal, invite_status: 'attending'), method: :patch, class: 'btn btn-success' %>
+    <%= button_to 'Decline', meal_usermeal_path(id: @usermeal.id, meal_id: @meal, invite_status: 'decline'), method: :patch, class: 'bth btn-warning' %>
+  </div>
 <% end %>
