--- a/app/views/dishes/show.html.erb
+++ b/app/views/dishes/show.html.erb
@@ -5,20 +5,20 @@
 <% if @dish.can_be_claimed %>
     <% if @current_guest == @host %>
       <% if @claimer == @host %>
-        No one else has claimed this yet, you're responsible as the host...
+        No one has vouched for this dish, yet.
+        As the host, you are ultimately responsible for it...
         <%= button_to "I will bring it", meal_dish_path(id: @dish.id, claimer_id: @host.id, can_be_claimed: false), method: :patch, class: 'btn btn-primary' %>
         <%= button_to 'Delete dish', meal_dish_path, method: :delete, class: 'btn btn-warning' %>
       <% else %>
-        this has been claimed
+        Someone vouched to bring this dish
         <%= button_to 'Delete dish', meal_dish_path, method: :delete, class: 'btn btn-warning' %>
       <% end %>
 
     <% else %>
       <% if @claimer == @current_guest %>
-        you said you are bringing this dish
+        you said you would bring this dish
         <%= button_to "Actually, I will not bring it", meal_dish_path(id: @dish.id, claimer_id: @host.id, can_be_claimed: true), method: :patch, class: 'btn btn-warning' %>
       <% elsif @claimer == @host %>
-        this dish can be claimed
         <%= button_to "I will bring it", meal_dish_path(id: @dish.id, claimer_id: @current_guest.id, can_be_claimed: true), method: :patch, class: 'btn btn-primary' %>
       <% else %>
         This dish has been claimed
