users can delete their own comments

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,4 +1,11 @@
 <p>
   <i><%= comment.user.email %> commented:</i><br>
   <%= comment.content %>
+  <% if current_user == comment.user %>
+    <% if  comment.commentable_type == 'Dish' %>
+      <%= link_to 'X', dish_comment_path(@dish, comment), method: :delete, class: "btn btn-warning" %>
+    <% else %>
+      <%= link_to 'X', meal_comment_path(@meal, comment), method: :delete, class: "btn btn-warning" %>
+    <% end %>
+  <% end %>
 </p>
