--- a/app/views/meals/show.html.erb
+++ b/app/views/meals/show.html.erb
@@ -1,20 +1,21 @@
-<p><%= @meal.host.email %></p>
+<p> Host: <%= @meal.host.email %></p>
 <h2><%= @meal.title %></h2>
-<p><%= @meal.location %> at <%= @meal.hosted_at %></p>
+<p><%= @meal.location %> | <%= @meal.hosted_at.strftime("%F | %r") %></p>
 
 <% if @meal.host == current_user %>
-  <p> Invite Guests </p>
+  Invite Guests
   <%= form_tag(meal_users_path(@meal), method: :get, id: "search-form")   do %>
     <%= text_field_tag :search, params[:search], placeholder: "Search Users" %>
     <%= submit_tag "Search", :name => nil %>
   <% end %>
 
+  SEARCH YUMMLY OR
+  <%= link_to 'Make your own', new_meal_dish_path(@meal) %>
+
   <%= form_tag(meal_dish_search_path(@meal), method: :post, id: 'search-form') do %>
     <%= text_field_tag :search_term, params[:search_term], placeholder: "Search recipes" %>
     <%= submit_tag "Search", name: nil %>
   <% end %>
-  SEARCH YUMMLY OR
-  <%= link_to 'Make your own', new_meal_dish_path(@meal) %>
 
   <%= button_to 'Delete Meal', meal_path(@meal), method: :delete, class: 'btn btn-warning' %>
 
