replace usermeals with invite in views

--- a/app/views/dishes/new.html.erb
+++ b/app/views/dishes/new.html.erb
@@ -29,7 +29,7 @@
   </div>
 
   <div class="field">
-    <%= f.label "Anyone can bring" %>
+    <%= f.label "Anyone can bring this (uncheck if you are bringing it)" %>
     <br>
     <%= f.check_box :can_be_claimed %>
   </div>
