--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,15 +4,15 @@
     <%= user.invites.find_by(meal_id: params[:meal_id]).invite_status %>  |  <%= user.email %>
   <% else %>
     <div class="block">
-    <%= button_to 'Invite', meal_invites_path(user_id: user, role: 'guest', invite_status: 'pending'), method: :post, class: 'btn btn-primary' %>
+    <%#= button_to 'Invite', meal_invites_path(user_id: user, role: 'guest', invite_status: 'pending'), method: :post, class: 'btn btn-primary' %>
 
-    <%#= form_for :usermeal do |f| %>
-      <%#= f.hidden_field :meal_id, value: @meal %>
-      <%#= f.hidden_field :user_id, value: user %>
-      <%#= f.hidden_field :role, value: 'guest' %>
-      <%#= f.hidden_field :invite_status, value: 'pending' %>
-      <%#= f.submit "Invite" %>
-    <%# end %>
+    <%= form_for :invite do |f| %>
+      <%= f.hidden_field :meal_id, value: @meal %>
+      <%= f.hidden_field :user_id, value: user %>
+      <%= f.hidden_field :role, value: 'guest' %>
+      <%= f.hidden_field :invite_status, value: 'pending' %>
+      <%= f.submit "Invite" %>
+    <% end %>
 
     </div>
     |  <%= user.email %>
