--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,17 +9,18 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-<div>
+
+<%= render 'layouts/header' %>
      <% if user_signed_in? %>
       Logged in as <strong><%= current_user.email %></strong>.
-      <%= link_to 'Home', root_path %> |
-      <%= link_to 'Account', edit_user_registration_path %> |
-      <%= link_to "Logout", destroy_user_session_path, method: :delete %>
+      <%#= link_to 'Home', root_path %> |
+      <%#= link_to 'Account', edit_user_registration_path %> |
+      <%#= link_to "Logout", destroy_user_session_path, method: :delete %>
     <% else %>
-      <%= link_to "Sign up", new_user_registration_path %> |
-      <%= link_to "Login", new_user_session_path %>
+      <%#= link_to "Sign up", new_user_registration_path %> |
+      <%#= link_to "Login", new_user_session_path %>
     <% end %>
-  </div>
+
 
 <% flash.each do |name, msg| %>
    <% if msg.is_a?(String) %>
