format buttons in header

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,10 @@
 <head>
   <title>Potlucky</title>
   <%= stylesheet_link_tag '//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css' %>
+  <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css">
+<script type="text/javascript" src="//code.jquery.com/jquery-2.0.2.js"></script>
   <%= javascript_include_tag '//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js' %>
+
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
@@ -11,16 +14,6 @@
 <body>
 
 <%= render 'layouts/header' %>
-     <% if user_signed_in? %>
-      Logged in as <strong><%= current_user.email %></strong>.
-      <%#= link_to 'Home', root_path %> |
-      <%#= link_to 'Account', edit_user_registration_path %> |
-      <%#= link_to "Logout", destroy_user_session_path, method: :delete %>
-    <% else %>
-      <%#= link_to "Sign up", new_user_registration_path %> |
-      <%#= link_to "Login", new_user_session_path %>
-    <% end %>
-
 
 <% flash.each do |name, msg| %>
    <% if msg.is_a?(String) %>
