--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,49 +1,52 @@
-<header class="navbar navbar-fixed-top navbar-default">
-  <p class='navbar-brand'>Potlucky</p>
+<header class="navbar navbar-static-top navbar-default">
+  <div class="container">
+    <p class='navbar-brand'>Potlucky</p>
 
-  <button class = "navbar-toggle" data-toggle = "collapse" data-target = ".navHeaderCollapse">
-    <span class = "icon-bar"></span>
-    <span class = "icon-bar"></span>
-    <span class = "icon-bar"></span>
-  </button>
+    <button class = "navbar-toggle" data-toggle = "collapse" data-target = ".navHeaderCollapse">
+      <span class = "icon-bar"></span>
+      <span class = "icon-bar"></span>
+      <span class = "icon-bar"></span>
+    </button>
 
 
-  <div class = "collapse navbar-collapse navHeaderCollapse">
-    <div class = "navbar-inner">
-      <nav>
-        <ul class="nav navbar-nav navbar-right">
-          <% if user_signed_in? %>
-          <li>
-            <%= link_to root_path, class: "btn btn-primary btn-sm" do %>
-            <i class="glyphicon glyphicon-home"> Home</i>
-            <% end %>
-          </li>
-          <li>
-            <%= link_to edit_user_registration_path, class: "btn btn-info btn-sm" do %>
-            <i class="glyphicon glyphicon-user"> Account</i>
-            <% end %>
-          </li>
-          <li>
-            <%= link_to destroy_user_session_path, method: :delete, class: 'btn btn-warning btn-sm' do %>
-            <i class="glyphicon glyphicon-log-out"> Logout</i>
-            <% end %>
-          </li>
-
-          <% else %>
-          <li>
-            <%= link_to new_user_registration_path, class: "btn btn-info btn-sm" do %>
-            <i class="glyphicon glyphicon-user"> Sign Up</i>
-            <% end %>
-          </li>
-          <li>
-            <%= link_to new_user_session_path, class: "btn btn-primary btn-sm" do %>
-            <i class="glyphicon glyphicon-log-in"> Sign In</i>
-            <% end %>
-          </li>
-
+    <div class = "collapse navbar-collapse navHeaderCollapse">
+      <ul class="nav navbar-nav navbar-right">
+        <% if user_signed_in? %>
+        <li>
+          <%= link_to root_path, class: "btn btn-primary btn-sm" do %>
+          <i class="glyphicon glyphicon-home"> Home</i>
           <% end %>
-        </ul>
-      </nav>
+        </li>
+        <li>
+          <%= link_to edit_user_registration_path, class: "btn btn-info btn-sm" do %>
+          <i class="glyphicon glyphicon-user"> Account</i>
+          <% end %>
+        </li>
+        <li>
+          <%= link_to destroy_user_session_path, method: :delete, class: 'btn btn-warning btn-sm' do %>
+          <i class="glyphicon glyphicon-log-out"> Logout</i>
+          <% end %>
+        </li>
+
+        <% else %>
+        <li>
+          <%= link_to new_user_registration_path, class: "btn btn-info btn-sm" do %>
+          <i class="glyphicon glyphicon-user"> Sign Up</i>
+          <% end %>
+        </li>
+        <li>
+          <%= link_to new_user_session_path, class: "btn btn-primary btn-sm" do %>
+          <i class="glyphicon glyphicon-log-in"> Sign In</i>
+          <% end %>
+        </li>
+
+        <% end %>
+      </ul>
+      <% if user_signed_in? %>
+      <p class="text-center">Logged in as <strong><%= current_user.email %></strong></p>
+      <% end %>
     </div>
+
   </div>
+
 </header>
