bootstrap container and rows for app body

--- a/app/views/meals/index.html.erb
+++ b/app/views/meals/index.html.erb
@@ -40,7 +40,7 @@
 
 <% else %>
 
-  <div class="inner cover text-center">
+  <div>
     <h1 class="cover-heading">Plan meals, pick food, invite your friends!</h1>
     <p class="lead">Potlucky is a thing that does things yay things, this is a massive lead in</p>
     <p class="lead">
