--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,13 +15,18 @@
 
 <%= render 'layouts/header' %>
 
-<% flash.each do |name, msg| %>
-   <% if msg.is_a?(String) %>
-     <%= content_tag :div, msg, :class => "flash_#{name}" %>
-   <% end %>
-<% end %>
-
-<%= yield %>
+<div class="container text-center">
+  <div class="row">
+    <% flash.each do |name, msg| %>
+       <% if msg.is_a?(String) %>
+         <%= content_tag :div, msg, :class => "flash_#{name}" %>
+       <% end %>
+    <% end %>
+  </div>
+  <div class="row">
+  <%= yield %>
+  </div>
+</div>
 
 </body>
 </html>
