add 'none entered' fills for meal guests and dishes

--- a/app/views/meals/_guest_list.html.erb
+++ b/app/views/meals/_guest_list.html.erb
@@ -1,4 +1,9 @@
 <h2> Guests </h2>
+<% if @guests.empty? %>
+  <p>
+    You haven't invited any guests
+  </p>
+<% end %>
 <ul>
   <% @guests.each do |guest| %>
   <li>
