--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -43,7 +43,7 @@
         <% end %>
       </ul>
       <% if user_signed_in? %>
-      <p class="text-center">Logged in as <strong><%= current_user.email %></strong></p>
+      <h3 class="text-center">Logged in as <strong><%= current_user.email %></strong></h3>
       <% end %>
     </div>
 
