--- a/app/views/meals/_guest_list.html.erb
+++ b/app/views/meals/_guest_list.html.erb
@@ -1,7 +1,7 @@
 <h2> Guests </h2>
 <% if @guests.empty? %>
   <p>
-    You haven't invited any guests
+    No one has accepted an invitation
   </p>
 <% end %>
 <ul>
